# empty-gl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
assets/models/primitives/: plane.glb
assets/shaders/: billboard.frag  billboard.vert  mesh.frag  mesh.vert  solid.frag  solid.vert  text.frag
res/models/primitives/: sphere.glb
res/shaders/: color.frag  color.vert  mesh.frag  mesh.vert  text.frag  text.vert
src/: engine.cpp  engine.h  main.cpp
src/core/: camera.cpp  camera.h  input.cpp  input.h  logger.cpp  logger.h  math.h  transform.cpp  transform.h  types.h
src/render/: font.cpp  font.h  model.cpp  model.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.cpp  utils.h
src/renderer/: font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h
